--- a/browser/js/authorized/profile/settings/settings.html
+++ b/browser/js/authorized/profile/settings/settings.html
@@ -4,7 +4,7 @@
             <div class="form-group mar-20">
                 <label class="col-sm-2 control-label">Avatar</label>
                 <div class="col-sm-8">
-                    <div class="user-thumb"><img ng-src="{{user.profilePic}}" title="John Doe" alt="John Doe" /></div>
+                    <div class="user-thumb"><img ng-src="{{user.profilePic}}" /></div>
                     <button type="file" ngf-select="changeProfilePic($file)" accept="image/*" ng-f-max-height="1000" ngf-max-size="2mb" class="change-pro slim-btn outlined-btn gray-btn float-rt">Change</button>
                 </div>
             </div>
