--- a/browser/js/authorized/profile/student.html
+++ b/browser/js/authorized/profile/student.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="teach-profile">
-                    <div class="teacherpro"><img ng-src="{{user.profilePic}}" alt="teacher detail" /></div>
+                    <div class="teacherpro"><img ng-src="{{user.profilePic}}" alt="" /></div>
                     <h1 class="sec-title b">{{user.firstName}} {{user.lastName}}</h1>
                     <div class="pro-degree"><span ng-if="user.location">Located in {{user.location}}</span></div>
                 </div>
@@ -14,7 +14,7 @@
                 <h2 class="sec-title b m-t-0">About Me <span class="linedi m-l-0"></span></h2>
                 <ul class="aboutteach-info row">
                     <li class="clearfix">
-                        <label class="col-md-3">Full Name</label><span class="col-md-9">{{user.name}}</span>
+                        <label class="col-md-3">Full Name</label><span class="col-md-9">{{user.firstName}} {{user.lastName}}</span>
                     </li>
                     <li class="clearfix">
                         <label class="col-md-3">Age</label><span class="col-md-9">{{user.age}}</span>
