--- a/browser/js/authorized/teachers/aside.html
+++ b/browser/js/authorized/teachers/aside.html
@@ -21,6 +21,9 @@
           <span class="clear">
             <span class="block user-pro-name">{{user.firstName}} {{user.lastName}}</span>
           </span>
+          <span class="clear">
+            <span class="block user-pro-name">{{user.credits || 0}} Credits Available</span>
+          </span>
         </span>
       </span>
       </li>
@@ -29,14 +32,9 @@
           <span>Edit Profile</span>
         </a>
       </li>
-      <li ui-sref-active="active-sref">
-        <a ui-sref="payroll" class="editpro">
-          <span>Payroll Options</span>
-        </a>
-      </li>
-      <li ui-sref-active="active-sref">
-        <a ui-sref="credentials" class="editpro">
-          <span>Credentials</span>
+      <li ui-sref-active="active">
+        <a ui-sref="checkout" class="editpro">
+          <span>Add Credits</span>
         </a>
       </li>
     </ul>
@@ -62,11 +60,6 @@
           <span>My Courses</span>
         </a>
       </li>
-<!--       <li ui-sref-active="active-sref">
-        <a ui-sref="app.dashboard">
-          <span>Assignments Due</span>
-        </a>
-      </li> -->
       <li ui-sref-active="active-sref">
         <a ui-sref="quizDashboard">
           <span>Quiz Manager</span>
@@ -79,55 +72,12 @@
       </li>
     </ul>
   </li>
-
-<!--   <li>
-    <a ui-sref="dashboard">
-     <span class="nav-img"><img src="img/nav-calendar.png"/></span>
-      <span class="font-bold" translate="aside.nav.CALENDAR">Calendar</span>
+  <li ui-sref-active="active-sref">
+    <a ui-sref="forums">
+     <span class="nav-img"><img src="img/nav-forum.png"></span>
+      <span class="font-bold" translate="Messages">Forums</span>
     </a>
-  </li> -->
-
-<!--   <li>
-    <a ui-sref="dashboard">
-     <span class="nav-img"><img src="img/nav-message.png"/></span>
-      <span class="font-bold" translate="Messages">Messages</span>
-    </a>
-  </li> -->
-
-    <li ui-sref-active="active-sref">
-      <a ui-sref="forums">
-       <span class="nav-img"><img src="img/nav-forum.png"></span>
-        <span class="font-bold" translate="Messages">Forums</span>
-      </a>
   </li>
-
-<!--   <li>
-    <a ui-sref-active="active-sref" class="auto" toggle-parent-class="active">      
-    <span class="nav-img"><img src="img/nav-forum.png"/></span>
-      <span class="pull-right text-muted">
-        <i class="fa fa-fw fa-plus text"></i>
-        <i class="fa fa-fw fa-minus text-active"></i>
-      </span>
-      <span class="font-bold">Forums</span>
-    </a>
-    <ul class="nav nav-sub dk">
-      <li ui-sref-active="active-sref">
-        <a ui-sref="forums">
-          <span>Home</span>
-        </a>
-      </li>
-      <li ui-sref-active="active-sref">
-        <a ui-sref="app.dashboard">
-          <span>Category</span>
-        </a>
-      </li>
-      <li ui-sref-active="active-sref">
-        <a ui-sref="app.dashboard">
-          <span>Thread</span>
-        </a>
-      </li>
-    </ul>
-  </li> -->
 
 
   <li>
@@ -140,11 +90,6 @@
       <span class="font-bold">Reports</span>
     </a>
     <ul class="nav nav-sub dk">
-<!--       <li ui-sref-active="active-sref">
-        <a ui-sref="earnings">
-          <span>Earnings</span>
-        </a>
-      </li> -->
       <li ui-sref-active="active-sref">
         <a ui-sref="transactions">
           <span>Transactions</span>
