--- a/browser/js/authorized/dashboard/student.html
+++ b/browser/js/authorized/dashboard/student.html
@@ -96,7 +96,7 @@
                         </ul>
                     </div>
                     <div class="outlined clearfix pad-20 no-top-border">
-                        <a href="" class="outlined-btn gray-btn float-rt">View All</a>
+                        <a ui-sref="myCourses" class="outlined-btn gray-btn float-rt">View All</a>
                     </div>
                 </div>
                 <!-- / Upcoming Classes -->
@@ -112,36 +112,6 @@
                     </div>
                     <div class="outlined clearfix graph no-top-border">
                         <ul class="class-list">
-                            <li>
-                                <span class="stud-quiz-dash">
-                                    <span class="class-title">Fractions 101</span>
-                                    <span class="desc-det"><span class="desc-lbl no-pad">Course:</span> Fractions 101</span>
-                                </span>
-                                <span class="result-wrap">
-                                    <span class="result-rat good">5.8</span><br>
-                                    <span class="result-lbl">Good</span>
-                                </span>
-                            </li>
-                            <li>
-                                <span class="stud-quiz-dash">
-                                    <span class="class-title">Fractions 101</span>
-                                    <span class="desc-det"><span class="desc-lbl no-pad">Course:</span> Fractions 101</span>
-                                </span>
-                                <span class="result-wrap ">
-                                    <span class="result-rat great">9.8</span><br>
-                                    <span class="result-lbl">Great</span>
-                                </span>
-                            </li>
-                            <li>
-                                <span class="stud-quiz-dash">
-                                    <span class="class-title">Fractions 101</span>
-                                    <span class="desc-det"><span class="desc-lbl no-pad">Course:</span> Fractions 101</span>
-                                </span>
-                                <span class="result-wrap">
-                                    <span class="result-rat failed">3.4</span><br>
-                                    <span class="result-lbl">Failed</span>
-                                </span>
-                            </li>
                         </ul>
                     </div>
                     <div class="outlined clearfix pad-20 no-top-border">
@@ -164,7 +134,7 @@
                         </ul>
                     </div>
                     <div class="outlined clearfix pad-20 no-top-border">
-                        <a ui-sref="classSearch" class="outlined-btn red-btn float-rt">Sign up for new Classes</a>
+                        <a ui-sref="search" class="outlined-btn red-btn float-rt">Sign up for new Classes</a>
                     </div>
                 </div>
                 <!-- / Courses -->
